<resources>
    <string name="app_name">SecretSantaServiсe</string>
    <string name="title_number_of_participants">Введите количество участников</string>
    <string name="title_names_of_participants">Введите имена участников</string>
    <string name="title_select_name_for_set_parameters">Выберите участников для установки ограничений или нажмите
        продолжить
    </string>
    <string name="title_select_name_for_set_params">Выберите участника для установки ограничений
    </string>
    <string name="title_select_name_for_show_receiver">Выберите санту для просмотра получателя</string>
    <string name="title_select_local_or_network">Выберите версию</string>
    <string name="title_input_id_or_create_new">Введите ID жеребьевки или создайте новую</string>
    <string name="title_enter_name">Введите имя</string>
    <string name="title_enter_email">Введите логин (email)</string>
    <string name="title_select_game">Выберите игру</string>
    <string name="title_enter_login">Введите логин (email)</string>
    <string name="title_receiver">Получатель:</string>
    <string name="title_id_game">Игра:</string>
    <string name="title_wishlist">Напишите сообщение своему санте:</string>
    <string name="title_your_wish">Ваше пожелание санте:</string>
    <string name="title_enter_id_game">Введите id игы</string>
    <string name="title_participants">Участники:</string>
    <string name="title_connection_info">"Сообщите Id друзьям, чтобы они могли присоединиться, или добавьте их
        самостоятельно"
    </string>
    <string name="title_end">Завершить</string>
    <string name="title_go_back">Назад</string>
    <string name="title_go_next">Продолжить</string>
    <string name="title_create">Создать</string>
    <string name="title_connect">Присоединиться</string>
    <string name="title_santa_nd_receiver">Санта %s дарит подарок участнику %s</string>
    <string name="title_person_added">Добавлен новый Person</string>
    <string name="title_participant_added">Добавлен новый участник</string>
    <string name="title_login">Войти</string>
    <string name="title_registration">Регистрация</string>
    <string name="title_name_of_participants">Введите данные участников</string>
    <string name="title_registration_data">Заполните данные</string>
    <string name="title_add_or_change">Добавить/Изменить</string>
    <string name="title_choose_receivers_for_santa">Выберите кому %s может дарить подарок</string>
    <string name="title_choose_naughtylist_for_santa">Выберите кому %s НЕ может дарить подарок</string>
    <string name="title_server_problem">Проблемы с сервером, попробуйте позже</string>
    <string name="title_game_create">Игра %s создана</string>
    <string name="title_participants_add">Участники добавлены. Установите ограничения и начните игру</string>
    <string name="title_game_does_not_exist">Игра %s не существует или завершена</string>
    <string name="title_change">Изменить</string>
    <string name="title_person_info">Личный кабинет</string>
    <string name="title_create_game">Создать игру</string>
    <string name="title_connect_to_game">Присоединиться к игре</string>
    <string name="title_quickplay_info">Игра не сохраняется. Выберите этот вариант, если все игроки присутствуют.
    </string>
    <string name="title_local_info">Игра сохраняется на устройстве. Выберите этот вариант, если нет возможности
        подключиться к сети.
    </string>
    <string name="title_network_info">Игра сохраняется на сервере. Игроки могут присоединиться к игре с другого
        устройства.
        После жеребьевки увидят в списке игру и смогут посмотреть получателя
    </string>
    <string name="title_bad_conditions">Неверные условия. Невозможно установить получателей</string>
    <string name="title_person_delete">Участник удален из игры</string>
    <string name="title_wish_">Вы еще не отправили свое пожелание Санте \n</string>
    <string name="title_incorrect_info">Введите корректные данные</string>
    <string name="title_connected_to_game">
        Вы добавлены к игре. Дождитесь пока будет проведена жеребьевка, зайдите в игру и посмотрите получателя.
    </string>
    <string name="title_login_not_found">
        Такой логин не зарегистрирован
    </string>
    <string name="title_login_used">
        Логин уже используется
    </string>
    <string name="title_registration_ok">
        Регистрация прошла успешно
    </string>
    <string name="title_name_changed">
        Имя изменено
    </string>
    <string name="title_email_changed">
        Email изменен
    </string>
    <string name="title_participant_add_in_game">
        Участник добавлен в игру
    </string>
    <string name="title_restrictions_set">
        Ограничения установлены
    </string>
    <string name="title_wish_send">
        Пожелание отправлено
    </string>
    <string name="title_game_delete">
        Игра удалена из вашего списка
    </string>
    <string name="title_receiver_wish">
        Пожелание получателя:
    </string>
    <string name="title_wish_not_sent_earlier">
        Вы еще не отправили свое пожелание Санте
    </string>
    <string name="title_wish_already_sent_earlier">
        Вы уже отправили Санте сообщение. Можете отправить еще раз, но не обижайтесь, если он уже выбрал Вам подарок
    </string>
    <string name="title_game">Игра</string>
    <string name="title_activity_quickplay">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_quick_play">QuickPlayActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_add">Добавить</string>
    <string name="title_set">Установить</string>
    <string name="title_names">Участники</string>
    <string name="title_conditions">Ограничения</string>
    <string name="title_set_params">Установить ограничение</string>
</resources>