<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.allgames.AllGamesActivity">


    <LinearLayout
            android:id="@+id/mainLinearLayoutAllGames"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:id="@+id/LinearLayoutAllGames2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <Button
                    android:id="@+id/buttonGoNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_go_back"/>
            <Button
                    android:id="@+id/buttonPersonInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_person_info"
                    tools:ignore="MissingConstraints"/>
            <Button
                    android:id="@+id/buttonCreateGame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_create_game"
                    tools:ignore="MissingConstraints"/>
            <Button
                    android:id="@+id/buttonConnect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_connect_to_game"
                    tools:ignore="MissingConstraints"/>

            <TextView
                    android:id="@+id/textViewAllGames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_select_game"
                    android:textSize="14pt"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/all_games_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            tools:ignore="MissingConstraints">

        <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"/>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>