<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.RegistrationActivity">
    <LinearLayout
            android:id="@+id/mainLinearLayoutNewParticipant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
                android:id="@+id/textViewNewParticipant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_registration_data"
                android:textSize="14pt"/>
        <LinearLayout
                android:id="@+id/mainLinearLayoutNewParticipant2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/textViewNewParticipantName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_enter_name"
                    android:textSize="14pt"/>
            <EditText
                    android:id="@+id/editTextParticipantName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="14pt"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/mainLinearLayoutNewParticipant3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/textViewNewParticipantEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_enter_email"
                    android:textSize="14pt"/>
            <EditText
                    android:id="@+id/editTextParticipantEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="14pt"/>

        </LinearLayout>
        <Button
                android:id="@+id/buttonAddParticipant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_create"/>
    </LinearLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            tools:ignore="MissingConstraints">

        <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>