<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.PersonInfoActivity">

    <LinearLayout
            android:id="@+id/mainLinearLayoutNewParticipant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <ScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">
            <LinearLayout
                    android:id="@+id/LinearLayoutPersonInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <Button
                        android:id="@+id/buttonGoBack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_go_back"/>
                <TextView
                        android:id="@+id/textViewNewParticipant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_registration_data"
                        android:textSize="14pt"/>
                <LinearLayout
                        android:id="@+id/mainLinearLayoutNewParticipant2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <TextView
                            android:id="@+id/textViewTextPersonName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_enter_name"
                            android:textSize="12pt"/>
                    <EditText
                            android:id="@+id/extViewPersonName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="             "
                            android:textSize="12pt"/>
                    <Button
                            android:id="@+id/buttonChangeName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_change"/>
                </LinearLayout>
                <LinearLayout
                        android:id="@+id/mainLinearLayoutNewParticipant3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <TextView
                            android:id="@+id/textViewTextPersonEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_enter_email"
                            android:textSize="12pt"/>
                    <EditText
                            android:id="@+id/editTextPersonEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="             "
                            android:textSize="12pt"/>
                    <Button
                            android:id="@+id/buttonChangeEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_change"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            tools:ignore="MissingConstraints">

        <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>