<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SelectVersionActivity">
    <LinearLayout
            android:id="@+id/mainLinearLayoutAllGames"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <ScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">
            <LinearLayout
                    android:id="@+id/linearLayoutSelectVersion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                <TextView
                        android:id="@+id/textViewSelectLocalOrNetwork"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14pt"
                        android:text="@string/title_select_local_or_network"
                        tools:ignore="MissingConstraints"/>
                <Button
                        android:id="@+id/buttonGoToQuick"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Quickplay"
                        tools:ignore="MissingConstraints"/>
                <TextView
                        android:id="@+id/textViewSelectLocalOrNetworkQuickplay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12pt"
                        android:text="@string/title_quickplay_info"
                        tools:ignore="MissingConstraints"/>
                <Button
                        android:id="@+id/buttonGoToLocal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Локальная"
                        tools:ignore="MissingConstraints"/>
                <TextView
                        android:id="@+id/textViewSelectLocalOrNetworkLocal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12pt"
                        android:text="@string/title_local_info"
                        tools:ignore="MissingConstraints"/>
                <Button
                        android:id="@+id/buttonGoToNetwork"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Сетевая"
                        tools:ignore="MissingConstraints"/>
                <TextView
                        android:id="@+id/textViewSelectLocalOrNetworkNetwork"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12pt"
                        android:text="@string/title_network_info"
                        tools:ignore="MissingConstraints"/>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>